Fix kubectl error unable to start app.jar