@@ -16,6 +16,7 @@ ENV TZ="Europe/Oslo"
 # Please see https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits
 ENV DEFAULT_JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
 
+ENV JAVA_APP_PARAMS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
 ENV APP_MAIN_CLASS no.difi.meldingsutveksling.IntegrasjonspunktApplication
 ENV APP_PROFILE staging
 ENV SPRING_CLOUD_CONFIG_ENABLED false
@@ -26,11 +27,8 @@ ENV ENDPOINTS_HEALTH_ENABLED=true
 ENV ENDPOINTS_INFO_ENABLED=true
 #ENV SPRING_DATASOURCE_URL=jdbc:postgresql://tpa-move-integrasjonspunkt-postgresql.tpa/move_db
 
-EXPOSE 8080
+COPY integrasjonspunkt.jar /app/app.jar
 
 WORKDIR /app
 
-COPY integrasjonspunkt.jar /app/
-
-
-CMD java -jar ${APP_JAVA_PARAMS} ${DEFAULT_JAVA_OPTS} integrasjonspunkt.jar ${APP_MAIN_CLASS} --spring.profiles.active=${APP_PROFILE}
+CMD java -jar ${APP_JAVA_PARAMS} ${DEFAULT_JAVA_OPTS} app.jar ${APP_MAIN_CLASS} --spring.profiles.active=${APP_PROFILE}
